Add function Swagger
